--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Holiday Destination</h1><br>
+	<p>Lorem statement is not real</p>
+	<ol>
+		<li>Goa</li>
+		<li>Karnataka</li>
+		<li>Chennai</li>
+		<li>Hyderabad</li>
+		<li>Lacknow</li>
+	</ol>
+	<ul>
+		<li>Chappi</li>
+		<li>Ragi</li>
+		<li>Palaw</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
