--- a/main.html
+++ b/main.html
@@ -11,16 +11,12 @@
 	<h1>Holiday Destination</h1><br>
 	<p>Lorem statement is not real</p>
 	<ol>
-		<li>Goa</li>
-		<li>Karnataka</li>
-		<li>Chennai</li>
-		<li>Hyderabad</li>
-		<li>Lacknow</li>
+		<li><i>Goa</i></li>
+		<li><i>Goa</i></li><li><i>Goa</i></li><li><i>Goa</i></li><li><i>Goa</i></li>
 	</ol>
 	<ul>
-		<li>Chappi</li>
-		<li>Ragi</li>
-		<li>Palaw</li>
+		<li><i>Goa</i></li>
+		<li><i>Goa</i></li><li><i>Goa</i></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
