--- a/main.html
+++ b/main.html
@@ -11,12 +11,18 @@
 	<h1>Holiday Destination</h1><br>
 	<p>Lorem statement is not real</p>
 	<ol>
-		<li><i>Goa</i></li>
-		<li><i>Goa</i></li><li><i>Goa</i></li><li><i>Goa</i></li><li><i>Goa</i></li>
+		<li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li>
+		
 	</ol>
 	<ul>
-		<li><i>Goa</i></li>
-		<li><i>Goa</i></li><li><i>Goa</i></li>
+		<li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li><li><i><b>Gold</b></i></li>
+		<li><i><b>Gold</b></i></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
